--- a/ClientPage/style.css
+++ b/ClientPage/style.css
@@ -1,12 +1,15 @@
 /*@import url(https://fonts.googleapis.com/css?family=Comfortaa:400,300,700);*/
 @import url(https://fonts.googleapis.com/css?family=Poiret+One);
 
-/* variables that can be adjusted have comments next to them */
+/* general formatting */
 html, body, #screen-view, #screen-holder, .screen {
     height: 100vh;
     width: 100vw;
     margin: 0;
     padding: 0;
+    background-color: #B2DBBF;
+    font-family: 'Open Sans', sans-serif;
+
 }
 
 #screen-view {
@@ -15,18 +18,41 @@ html, body, #screen-view, #screen-holder, .screen {
 
 #screen-holder {
     /*background-image: url('img/graphy_@2X.png');*/
-    width: 300vw; /* var, 100 x NO_OF_SCREENS */`
+    width: 300vw; /* 100 x number of screens */`
 }
 
+
+/* SCREEN PROPERTIES */
 .screen {
     width: 100vw;
     display: table-cell;
-    padding-left: 2%;
-    padding-right: 2%;
-    padding-top: 3%;
 }
 
-#screen-holder .current {
+.screen-head {
+    /*font-family: 'Comfortaa', cursive;*/
+    text-transform: uppercase;
+    font-family: 'Poiret One', sans-serif;
+    font-size: 5vh;
+    font-weight: 400;
+    text-align: center;
+    color: #F3FFBD;
+
+    padding: 3% 0;
+    margin: 0;
+    border-bottom: 2px solid #666;
+    display: inline-block;
+    background-color: #247BA0;
+    width: 100vw;
+
+    white-space: nowrap;
+    overflow: hidden;
+}
+
+.screen-body {
+    width: 90vw;
+    margin: 0 auto;
+    margin-top: 2vw;
+    font-size: 2vh;
 }
 
 /* TRANSITIONS */
@@ -38,16 +64,73 @@ html, body, #screen-view, #screen-holder, .screen {
     transition: transform 0.6s cubic-bezier(0.19, 1, 0.22, 1); /*easings.net*/
 }
 
-/* PAGE STYLE */
-h1 {
-    /*font-family: 'Comfortaa', cursive;*/
-    font-family: 'Poiret One', cursive;
-    font-size: 9em;
-    font-weight: 400;
+/* ELEMENT FORMATS */
+h1, h2, h3, h4, ul, li, input, .box {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; /* doesn't work with IE < v8 */
+
     padding: 0;
-    padding-bottom: 1%;
     margin: 0;
-    border-bottom: 6px solid #728C9B;
+}
+
+li, .box {
+    padding: 2% 3%;
+}
+
+.box {
+    border-radius: 5px;
+}
+
+ul {
+    list-style-type: none;
+}
+
+li {
+    width: 100%;
+    background-color: white;
+
+    border-top: 1px solid #FF1654;
+}
+
+li:first-child {
+    border-top: none;
+    border-radius: 2px 3px 0 0;
+}
+
+li:last-child {
+    border-radius: 0 0 2px 2px;
+}
+
+#empty-message {
+    color: #F3FFBD;
+    background-color: #FF1654;
+}
+
+#empty-message i {
+    height: 100%;
     display: inline-block;
+    vertical-align: 30%;
+}
+
+#empty-message label {
+    display: inline-block;
+}
+
+#search-box {
+    width: 90vw;
+
+}
+
+#search-box input {
+    /*background: none;*/
+    background: pink;
+    border: none;
+    font-size: 3vh;
+    width: 80vw;
+}
+
+/* search icon */
+#search-box i {
 }
 
